appId: eu.europa.ec.euidi
name: FCAF helper - complete FormEU mandatory information
tags:
  - fcaf
  - helper
  - formeu
---
- runFlow:
    when:
      visible: "FormEU"
    commands:
      - tapOn: "FormEU"
- runFlow:
    when:
      visible: "Submit"
    commands:
      - tapOn: "Submit"
- runFlow:
    when:
      visible:
        id: selectCountryForm
    commands:
      - tapOn:
          below: "Birth Date"
          above: "Family Name"
          childOf:
            id: selectCountryForm
      - tapOn:
          id: date_picker_header_year
      - scrollUntilVisible:
          element: "2001"
          direction: UP
          speed: 10
      - tapOn: "2001"
      - tapOn: "Set"
      - scrollUntilVisible:
          element: "Family Name"
          speed: 5
          centerElement: true
      - tapOn:
          below: "Family Name"
          childOf:
            id: selectCountryForm
      - inputText: "F"
      - tapOn: { point: "50%,10%" }
      - scrollUntilVisible:
          element: "Given Name"
          speed: 5
          centerElement: true
      - tapOn:
          below: "Given Name"
          childOf:
            id: selectCountryForm
      - inputText: "N"
      - tapOn: { point: "50%,10%" }
      - scrollUntilVisible:
          element: "Country Code"
          speed: 10
          centerElement: true
      - tapOn:
          below: "Country Code"
          childOf:
            id: selectCountryForm
      - inputText: "IT"
      - tapOn: { point: "50%,10%" }
      - scrollUntilVisible:
          element: "Country"
          speed: 10
          centerElement: true
      - tapOn:
          below: "Country"
          above: "Locality"
          childOf:
            id: selectCountryForm
      - inputText: "IT"
      - tapOn: { point: "50%,10%" }
      - tapOn:
          below: "Locality"
          above: "Region"
          childOf:
            id: selectCountryForm
      - inputText: "Rome"
      - tapOn: { point: "50%,10%" }
      - tapOn:
          below: "Region"
          childOf:
            id: selectCountryForm
      - inputText: "Lazio"
      - tapOn: { point: "50%,10%" }
      - scrollUntilVisible:
          element: "Confirm"
          direction: DOWN
          speed: 10
      - tapOn: "Confirm"
