appId: eu.europa.ec.euidi
name: Select the second satisfiable DCQL claim set
tags: [fcaf, precondition, dcql]
---
- clearState: com.android.chrome
- launchApp:
  stopApp: true
  clearState: false
- runFlow:
    file: unlock-wallet.yaml
- openLink:
    link: "${DCQL_CLAIM_SETS_SECOND_PREFERRED_PRESENTATION_URL}"
    autoVerify: false
    browser: false
- runFlow:
    file: choose-eudi-wallet.yaml
- extendedWaitUntil:
    visible: "Welcome back|DATA SHARING REQUEST"
    timeout: 100000
- runFlow:
    when:
      visible: "Welcome back"
    commands:
      - tapOn:
          point: "11%,40%"
      - inputText: "123456"
      - tapOn:
          point: "50%,10%"
- extendedWaitUntil:
    visible: "DATA SHARING REQUEST"
    timeout: 100000
- tapOn: "Share"
- extendedWaitUntil:
    visible: "PIN"
    timeout: 30000
- tapOn:
    point: "11%,39%"
- inputText: "123456"
- tapOn:
    point: "50%,10%"
- extendedWaitUntil:
    visible: ".*successfully shared.*"
    timeout: 30000
- takeScreenshot: fcaf-ia-020
- tapOn: "Close"
